# cfde-kc-fetch

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml
.github/workflows/: pylint.yml  python-package.yml  python-publish.yml
cfde_kc_fetch/: __init__.py  __main__.py  cli.py  client.py  single_cell.py
docs/: examples.md  usage.md
tests/: __init__.py  test_cli.py  test_client.py  test_decompression.py  test_parsing.py  test_sanitization.py  test_single_cell.py
